# CabaModel

./: .env.example  .gitignore  README.md  pyproject.toml
docs/adr/: 001-Minimalist-Agent-Architecture-Google-ADK.md  002-Modular-Tool-Calling-Patterns.md  003-Hexagonal-Architecture-Pydantic-Validation.md
src/cabamodel/application/: c4b4_bot.py  temporal_agent.py
src/cabamodel/domain/: models.py
src/cabamodel/infrastructure/: agent_service.py
